@@ -374,6 +374,16 @@
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                             </jvmArgs>
                         </launcher>
+                        <launcher>
+                            <id>CreateLinesBytesPacked</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateLinesBytesPacked</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-Xms2G</jvmArg>
+                                <jvmArg>-Xmx4G</jvmArg>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
                     </launchers>
                 </configuration>
             </plugin>
